--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,15 @@
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
+
+  @layer components {
+    .no-spinner {
+      -moz-appearance: textfield;
+    }
+
+    .no-spinner::-webkit-outer-spin-button,
+    .no-spinner::-webkit-inner-spin-button {
+      margin: 0;
+      -webkit-appearance: none;
+    }
+  }
